--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,41 @@
 /*  your css code here. If applicable */
+header{
+	color:white;
+	text-align:center;
+	padding:20px;
+	background-color:#011e29;
+}
+
+body{
+	background-color:#f5f5f5;
+}
+
+.container{
+	display:flex;
+	gap:20px;
+}
+.box-1{
+	background-color:white;
+	border-radius:10px;
+	width:25%;
+}
+
+.box-2{
+	background-color:white;
+	border-radius:10px;
+	width:50%;
+}
+
+.box-3{
+	background-color:white;
+	border-radius:10px;
+	padding:5px;
+	width:25%;
+}
+
+img{
+	width:200px
+}
+
+
+
