--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body{
 	display:flex;
 	gap:20px;
 }
-.box-1{
+.latest-news-section{
 	background-color:white;
 	border-radius:10px;
 	width:25%;
@@ -28,7 +28,7 @@ body{
 	height:200px;
 }
 
-.box-3{
+.pictorial-news-section{
 	background-color:white;
 	border-radius:10px;
 	padding:5px;
